    $ svn log svn://svn.r-forge.r-project.org/svnroot/datatable

This NEWS file summarises the main changes.

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.6   **
        **                                         **
        *********************************************



        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.5   **
        **                                         **
        *********************************************

BUG FIXES

   o    merge()-ing a data.table where its key is not the first
        few columns in order now works correctly and without
        warning, fixing #1645. Thanks to Timothee Carayol for
        reporting.

   o    Mixing nomatch=0 and mult="last" (or "first") now works,
        #1661. Thanks to Johann Hibschman for reporting.

   o    Join Inherited Scope now respects nomatch=0, #1663. Thanks
        to Johann Hibschman for reporting.

   o    by= could generate a keyed result table with invalid key;
        e.g., when by= expressions return NA, #1631. Thanks to
        Muhammad Waliji for reporting.
        
   o    Adding a column to a data.table loaded from disk resulted
        in an error that truelength(DT)<length(DT).
        
   o    CJ() bogus values and logical error fixed, #1689. Thanks to
        Damian Betebenner and Chris Neff for reporting.
        
   o    j=list(.SD,newcol=...) now gives friendly error suggesting cbind
        or merge afterwards until := by group is implemented, rather than
        treating .SD as a list column, #1647. Thanks to a question by
        Christoph_J on Stack Overflow.
        

USER VISIBLE CHANGES

   o    rbind now cross-refs colnames as data.frame does, rather 
        than always binding by column order, FR#1634. A warning is